<?xml version="1.0" encoding="utf-8"?>
<!-- TODO -->
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eaeff0"
    tools:context=".ui.neighbour_list.DetailNeighbourActivity">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="#eaeff0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="centerCrop"/>

    <!-- <android.support.design.button.MaterialButton -->
    <ImageButton
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:padding="16dp"
        android:src="@drawable/ic_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:enabled="false"/>


    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginStart="4dp"
        android:layout_weight="2"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/avatar"/>

    <android.support.v7.widget.CardView
        android:id="@+id/CartOne"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/avatar"
        android:layout_margin="16dp"
        app:cardCornerRadius="8dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nameBis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="bottom"
                android:layout_margin="8dp"
                android:layout_weight="2"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#eaeff0"/>

            <TextView
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_margin="8dp"
                android:drawableLeft="@drawable/ic_room_24"
                android:drawablePadding="8dp"
                android:gravity="center"
                android:layout_weight="2" />

            <TextView
                android:id="@+id/phoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_margin="8dp"
                android:drawableLeft="@drawable/ic_phone_24"
                android:drawablePadding="8dp"
                android:gravity="center"
                android:layout_weight="2" />


                <TextView
                    android:id="@+id/nameFacebook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:layout_margin="8dp"
                    android:drawableLeft="@drawable/ic_language_24"
                    android:drawablePadding="8dp"
                    android:gravity="center"
                    android:layout_weight="2"/>


        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="180dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/CartOne"
        android:layout_margin="16dp"
        app:cardCornerRadius="8dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="A propos de moi"
                android:gravity="center"
                android:paddingTop="8dp"
                android:layout_margin="8dp"
                android:layout_weight="1"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#eaeff0"/>

            <TextView
                android:id="@+id/aboutMe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="32dp"
                android:layout_marginTop="24dp"
                android:drawablePadding="8dp"
                android:layout_weight="4" />

        </LinearLayout>

    </android.support.v7.widget.CardView>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/starSelect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:backgroundTint="#EFEFEF"
        android:src="@drawable/ic_star_white_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/avatar"
        android:layout_margin="16dp"/>


</android.support.constraint.ConstraintLayout>